# Forseti

./: .gitignore  README.md  __main__.py  pyproject.toml  pytest.ini  tests.py
core/: command_execute.py  execute.py  parse.py  parse_condition_items.py  parse_test.py
core/checkers/: staples.py  syntax.py  syntax_test.py
core/functions/: distance.py  length.py  nearby.py  regex.py
forseti_lang/: __main__.py  condition.py  execute.py  execute_many.py  execute_test.py  operator.py  parse.py  parse_test.py  preparing.py  types.py
forseti_lang/checkers/: __init__.py  all_.py  parenthesis.py  staples.py  syntax.py
forseti_lang/functions/: auto_execute.py  distance.py  distance_test.py  length.py  nearby.py  nearby_test.py  regex.py
tests/: execute_many_test.py
tests/checkers/: staples_test.py  syntax_test.py
tests/functions/: length_test.py
